Creacion de la API

--- a/MEINew/app/src/main/res/layout/fragment_login.xml
+++ b/MEINew/app/src/main/res/layout/fragment_login.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollLogin"
     android:layout_width="match_parent"
@@ -22,26 +23,21 @@
                 android:padding="20dp"
                 android:weightSum="1">
 
-                <RelativeLayout
+                <ImageView
+                    android:id="@+id/logoView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/logoView"
-                        android:layout_width="120dp"
-                        android:layout_height="150dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="20dp"
-                        android:contentDescription="logo" />
-                </RelativeLayout>
+                    android:layout_height="150dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:contentDescription="logo" />
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="25dp">
+                    android:layout_marginTop="16dp">
 
                     <EditText
-                        android:id="@+id/et_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Correo electrónico"
@@ -50,12 +46,13 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/et_pass"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="25dp">
+                    android:layout_marginTop="8dp"
+                    app:passwordToggleEnabled="true">
 
                     <EditText
-                        android:id="@+id/et_pass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif"
@@ -65,31 +62,18 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <Button
-                        android:id="@+id/btn_login"
-                        style="@style/Widget.AppCompat.Button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="40dp"
-                        android:backgroundTint="@color/colorPrimary"
-                        android:text="Iniciar sesion"
-                        android:textColor="@android:color/background_light" />
-                </RelativeLayout>
-
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/btn_login"
+                    style="@style/Widget.AppCompat.Button"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginTop="15dp"
-                    android:visibility="gone" />
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="Iniciar sesion"
+                    android:textColor="@android:color/background_light" />
 
             </LinearLayout>
 
