--- a/MEINew/app/src/main/res/layout/fragment_registro.xml
+++ b/MEINew/app/src/main/res/layout/fragment_registro.xml
@@ -140,23 +140,18 @@
                     android:textColorHint="?attr/colorControlNormal"
                     tools:ignore="HardcodedText" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp">
-
-                    <Button
-                        android:id="@+id/btn_registro"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_centerHorizontal="true"
-                        android:backgroundTint="@color/colorPrimary"
-                        android:text="Registrarse"
-                        android:textColor="@android:color/background_light"
-                        android:visibility="visible"
-                        tools:ignore="HardcodedText" />
-                </RelativeLayout>
+                <Button
+                    android:id="@+id/btn_registro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="Registrarse"
+                    android:textColor="@android:color/background_light"
+                    android:visibility="visible"
+                    tools:ignore="HardcodedText" />
 
             </LinearLayout>
 
