--- a/MEINew/app/src/main/res/layout/activity_career.xml
+++ b/MEINew/app/src/main/res/layout/activity_career.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ramir.mei.CareerActivity">
+    tools:context="ramir.mei.activity.CareerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_scrolling"
