--- a/MEINew/app/src/main/res/layout/app_bar_logged_fragment.xml
+++ b/MEINew/app/src/main/res/layout/app_bar_logged_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ramir.mei.LoggedFragment">
+    tools:context="ramir.mei.activity.LoggedActivity">
 
     <ImageView
         android:id="@+id/recomIV"
