--- a/MEINew/app/src/main/res/layout/carrer_content.xml
+++ b/MEINew/app/src/main/res/layout/carrer_content.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:transitionName="recoCard"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ramir.mei.CareerActivity"
+    tools:context="ramir.mei.activity.CareerActivity"
     tools:showIn="@layout/activity_career">
 
     <android.support.v7.widget.CardView
