--- a/MEINew/app/src/main/res/layout/content_logged_fragment.xml
+++ b/MEINew/app/src/main/res/layout/content_logged_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ramir.mei.LoggedFragment"
+    tools:context="ramir.mei.activity.LoggedActivity"
     tools:showIn="@layout/app_bar_logged_fragment"
     android:id="@+id/loggedContent">
 
