--- a/MEINew/app/src/main/res/layout/fragment_login.xml
+++ b/MEINew/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:id="@+id/scrollLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ramir.mei.LoginFragment">
+    tools:context="ramir.mei.fragment.notLogged.LoginFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
