--- a/MEINew/app/src/main/res/layout/logged_profile_fragment.xml
+++ b/MEINew/app/src/main/res/layout/logged_profile_fragment.xml
@@ -6,43 +6,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ramir.mei.ProfileLoggedFragment">
+    tools:context="ramir.mei.fragment.logged.ProfileLoggedFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <include
                 android:id="@+id/include"
                 layout="@layout/profile_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="200dp"
-                app:layout_anchorGravity="top|center" />
+                app:layout_anchorGravity="top|center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@color/colorAccent" />
 
             <ImageView
                 android:id="@+id/perfil_foto"
                 android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_height="121dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="137dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="90dp"
                 android:contentDescription="Foto"
                 app:layout_anchor="@+id/imageView"
                 app:layout_anchorGravity="bottom|center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@color/colorPrimaryDark" />
 
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
 </android.support.v4.widget.SwipeRefreshLayout>
