--- a/MEINew/app/src/main/res/layout/logged_test_fragment.xml
+++ b/MEINew/app/src/main/res/layout/logged_test_fragment.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listTest"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_test"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</ListView>
+    <ListView
+        android:id="@+id/listTest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</android.support.v4.widget.SwipeRefreshLayout>
