--- a/MEINew/app/src/main/res/layout/profile_content.xml
+++ b/MEINew/app/src/main/res/layout/profile_content.xml
@@ -6,16 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="20dp"
+    android:paddingTop="15dp"
     android:visibility="visible"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ramir.mei.ProfileLoggedFragment"
+    tools:context="ramir.mei.fragment.logged.ProfileLoggedFragment"
     tools:showIn="@layout/logged_profile_fragment">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
+        android:layout_margin="8dp"
         android:padding="16dp">
 
         <LinearLayout
@@ -58,7 +58,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="8dp"
         android:elevation="8dp"
         app:cardCornerRadius="4dp">
 
@@ -66,17 +66,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView20"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:text="Test realizados"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
             <TableLayout
                 android:id="@+id/tablaTest"
