--- a/MEINew/app/src/main/res/menu/fragment_logged_drawer.xml
+++ b/MEINew/app/src/main/res/menu/fragment_logged_drawer.xml
@@ -47,7 +47,7 @@
             tools:ignore="HardcodedText" />
         <item
             android:id="@+id/nav_cerrarc"
-            android:icon="@drawable/ic_action_name"
+            android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="Cerrar sesión"
             tools:ignore="HardcodedText" />
     </group>
