--- a/MEINew/app/src/main/res/layout/activity_test_vocacional_fragment.xml
+++ b/MEINew/app/src/main/res/layout/activity_test_vocacional_fragment.xml
@@ -9,7 +9,8 @@
     <RelativeLayout
         android:id="@+id/prueba"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -23,19 +24,13 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <android.support.v7.widget.RecyclerView
                     android:id="@+id/ly_testvoca"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:animateLayoutChanges="true"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:layoutAnimation="@anim/recycler_layou_anim">
 
-                    <ProgressBar
-                        android:id="@+id/testLoad"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
+                </android.support.v7.widget.RecyclerView>
 
                 <Button
                     android:id="@+id/enviarbt"
