--- a/MEINew/app/src/main/res/layout/logged_rec_fragment.xml
+++ b/MEINew/app/src/main/res/layout/logged_rec_fragment.xml
@@ -32,59 +32,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cardView">
 
-        <ScrollView
-            android:id="@+id/scrollReco"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recomLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/cardView">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/recomLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                </LinearLayout>
-
-                <RelativeLayout
-                    android:id="@+id/moreLy"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ProgressBar
-                        android:id="@+id/moreLoad"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="75dp"
-                        android:layout_height="75dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:indeterminateTint="@color/colorPrimary" />
-
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/button2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_margin="15dp"
-                        android:backgroundTint="@color/colorAccent"
-                        android:tint="@color/cardview_light_background"
-                        app:backgroundTint="@android:color/transparent"
-                        app:elevation="3dp"
-                        app:fabSize="normal"
-                        app:srcCompat="@drawable/ic_add_black_24dp" />
-                </RelativeLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
-
+            android:layout_height="match_parent"
+            android:layoutAnimation="@anim/recycler_layout_recom" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
