--- a/MEINew/app/src/main/res/layout/recom_card_sample.xml
+++ b/MEINew/app/src/main/res/layout/recom_card_sample.xml
@@ -4,10 +4,10 @@
     android:id="@+id/card_main_1_1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/main_card_margin_vertical"
-    android:layout_marginEnd="@dimen/main_card_margin_horizontal"
-    android:layout_marginStart="@dimen/main_card_margin_horizontal"
-    android:layout_marginTop="@dimen/main_card_margin_vertical"
+    android:layout_marginBottom="7dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="1dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:transitionName="recoCard"
     card_view:cardCornerRadius="6dp"
@@ -50,15 +50,6 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/tv_card_main1_subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/tv_card_main1_subtitle2"
-            android:layout_below="@+id/tv_card_main1_subtitle2"
-            android:text="Instituto"
-            android:transitionName="recoInst" />
-
-        <TextView
             android:id="@+id/tv_card_main1_subtitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,6 +57,15 @@
             android:layout_below="@+id/tv_card_main1_sueldo"
             android:text="Universidad"
             android:transitionName="recoUni" />
+
+        <TextView
+            android:id="@+id/tv_card_main1_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/tv_card_main1_subtitle2"
+            android:layout_below="@+id/tv_card_main1_subtitle2"
+            android:text="Instituto"
+            android:transitionName="recoInst" />
 
         <Button
             android:id="@+id/btn_card_main1_action1"
