--- a/MEINew/app/src/main/res/layout/test_result_layout_sample.xml
+++ b/MEINew/app/src/main/res/layout/test_result_layout_sample.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/tvDescript"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="Descripcion" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
