--- a/MEI-Master/assets/css/estilos.css
+++ b/MEI-Master/assets/css/estilos.css
@@ -32,6 +32,14 @@
 	background-size: auto 100% !important;
 }
 
+.redColor{
+	background: rgb(229,12,12);
+	background: -moz-linear-gradient(180deg, rgba(229,12,12,0.9424720571822479) 0%, rgba(212,27,27,0.9284664549413515) 46%, rgba(191,20,20,0.9200630935968137) 100%);
+	background: -webkit-linear-gradient(180deg, rgba(229,12,12,0.9424720571822479) 0%, rgba(212,27,27,0.9284664549413515) 46%, rgba(191,20,20,0.9200630935968137) 100%);
+	background: linear-gradient(180deg, rgba(229,12,12,0.9424720571822479) 0%, rgba(212,27,27,0.9284664549413515) 46%, rgba(191,20,20,0.9200630935968137) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e50c0c",endColorstr="#bf1414",GradientType=1);
+}
+
 @media screen and (min-width: 300px) {
 	.reco_foto{
 		min-height:12.5rem !important;
